# ai-learning-tutor

./: .env.example  .gitignore  Justfile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_quiz_items.py  003_review_records.py  (+14 more)
backend/app/: config.py  main.py
backend/eval/: README.md  analyze_adaptive_policy_v1.py  analyze_grounding_v1.py  evaluation_cases.json  run_adaptive_policy_evaluation.py  run_answer_evaluation.py  validate_adaptive_policy_dataset.py  validate_adaptive_policy_pilot.py
backend/tests/: test_adaptive_policy_analysis.py  test_adaptive_policy_dataset.py  test_adaptive_policy_eval_runner.py  test_adaptive_policy_pilot.py  test_adaptive_tutor_loop.py  test_answer_eval_runner.py  test_chat_api.py  test_concepts_api.py  test_concepts_service.py  test_course_workspace.py  test_documents_api.py  test_evaluation_api.py  test_evaluation_service.py  test_evidence_state_service.py  test_grounding_analysis.py  test_health.py  test_ingestion.py  test_learner_state_api.py  test_learner_state_service.py  test_mastery_api.py  test_mastery_service.py  test_misconceptions_api.py  test_misconceptions_service.py  test_policy_service.py  test_progress_api.py  test_progress_service.py  test_quiz_api.py  test_quiz_service.py  test_rag_evidence.py  test_review_service.py  test_reviews_api.py  test_search_api.py  test_socratic_api.py  test_socratic_service.py  test_tutor_api.py  test_tutor_context_service.py  test_tutor_outcome_service.py  test_tutor_response_service.py
(+123 files in other folders)
